[FIX] Database connection

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI : mongodb+srv://miftahuda:keoKIJCl9rCFurDj @cluster0.8urw3su.mongodb.net/
+MONGODB_URI=mongodb+srv://miftahuda:keoKIJCl9rCFurDj@cluster0.8urw3su.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
