create event database

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB_URI=mongodb+srv://miftahuda:keoKIJCl9rCFurDj@cluster0.8urw3su.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://miftahuda:keoKIJCl9rCFurDj@cluster0.8urw3su.mongodb.net/cleaning4solo?retryWrites=true&w=majority&appName=Cluster0
+PORT=9000
+HOST=mongodb://localhost:27017/cleaning4solo
