--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,8 @@
         "no-restricted-globals": 0,
         "linebreak-style": 0,
         "no-unused-vars": 0,
-        "import/no-unresolved": 0
+        "import/no-unresolved": 0,
+        "consistent-return":0,
+        "new-cap":0
     }
 }
