--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "cleaning4solo server API",
   "main": "index.js",
   "scripts": {
-    "dev": "SET NODE_ENV=development&&nodemon ./src/server.js",
+    "dev": "NODE_ENV=development nodemon ./src/server.js",
     "prod": "node ./src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.5",
