--- a/.env -example
+++ b/.env -example
@@ -1,3 +1,16 @@
 MONGODB_URI=
 PORT=
 HOST=
+JWT_SECRET=
+# firebase config
+TYPE=
+PROJECT_ID=
+PRIVATE_KEY_ID=
+PRIVATE_KEY=
+CLIENT_EMAIL=
+CLIENT_ID=
+AUTH_URI=
+TOKEN_URI=
+AUTH_PROVIDER_X509_CERT_URL=
+CLIENT_X509_CERT_URL=
+UNIVERSE_DOMAIN=
