--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.5",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
